# fed_learn

./: .gitignore  README.md  colab_code.ipynb  pyproject.toml  requirements.txt
configs/: README.md  local.example.toml
configs/experiments/: pilot_superni.toml
configs/models/: qwen_0_5b_instruct.toml  qwen_1_5b_instruct.toml
data/: README.md  data_collector.ipynb  data_test.py
data/manifests/: pilot_superni_tasks.csv
data/processed/: README.md
docs/: data_setup.md  setup.md  timeline
evaluation/: display_metrics.py  dummy_data.py  eval_experiment_results.py  evaluate_results.ipynb  load_data.py  metrics_writer.py  notes.txt
fed_learn.egg-info/: SOURCES.txt  top_level.txt
scripts/: build_swift_hydra_presentation.ps1  check_setup.py  check_superni_access.py  evaluate_checkpoint_snapshots.py  repartition_sqlite_clients.py  run_experiment_grid.py  run_federated_simulation.py  run_local_client_train.py  show_model_setup.py  show_pilot_plan.py
src/fed_learn/: __init__.py  config.py  data_pipeline.py  evaluation.py  federated.py  local_train.py  modeling.py  peft_state.py
src/fed_learn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
