[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fed-learn"
version = "0.1.0"
description = "Federated PEFT experiment scaffolding for the CIS4930 empirical project."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

